# NanoGame3D

./: .gitattributes  .gitignore  Cargo.toml  README.md
content/effects/: fire.fx.ron  fire.ron  template.fx.ron  test_sub_em.fx.ron
content/maps/: e1m1.bsp
content/materials/: brick.mat.ron  brick.toml  cobblestone.mat.ron  cobblestone.toml
content/materials/effects/: fire.mat.ron  fire.toml  glow.mat.ron
content/materials/misc/: imgui.mat.ron
content/models/: dragon-2_80.glb
content/models/dragon-2_80/: dragon.basis  (+4 more)
content/scripts/: engine.wren  test.rn  test.wren  window.rn
content/shaders/: default_lit.toml  default_particle.toml  imgui.toml  map_scroll.toml  map_shader.toml  prop_shader.toml
content/textures/: brick.basis  brick.ktx  cobblestone.basis  cobblestone.ktx
src/: asset_loader.rs  consolewin.rs  cvar.rs  frametimer.rs  gamestate.rs  imgui_render.rs  main.rs  math.rs  misc.rs  parse_utils.rs  serialization.rs
src/bsp/: bspcollision.rs  bspcommon.rs  bspfile.rs  bsplightmap.rs  bsprenderer.rs  mod.rs
src/component/: basicanim.rs  camera.rs  charactercontroller.rs  collider.rs  door.rs  effect.rs  light.rs  meshpose.rs  mod.rs  modelpose.rs  rendermesh.rs  rotator.rs  transform3d.rs
src/effect/: effect_data.rs  effect_instance.rs  mod.rs
src/graphics/: anim.rs  buffer.rs  gfx.rs  material.rs  mod.rs  model.rs  shader.rs  texture.rs
src/system/: anim_system.rs  ccmd_system.rs  character_system.rs  door_system.rs  effect_system.rs  flycam_system.rs  fpcam_system.rs  fpview_system.rs  mod.rs  render_system.rs  rotator_system.rs
src/ui/: font.rs  mod.rs  painter.rs  ui_vertex.rs  uiscript.rs
(+8 files in other folders)
