[package]
name = "nanogame3d"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel_skinning"]
gles2 = []
use_etc1 = []
two_bone_per_vertex = []
parallel_skinning = []

[dependencies]
byteorder = "1.5.0"
sdl2 = "0.37.0"
regex = "1.11.1"
gl = "0.14.0"
lazy_static = "1.5.0"
hecs = "0.10.5"
rect_packer = "0.2.1"
toml = "0.8.20"
gltf = "1.4.1"
basis-universal = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
rand = "0.9.1"
qoi = "0.4.1"
noise = "0.9.0"
